# CaroAI

./: .gitignore  Cargo.toml  README.md  constants.jsonc  display_recent_game_in_log.py  init_model.py  log.txt  run.bat
models/CaroZero/: keras_metadata.pb  saved_model.pb
models/CaroZero/variables/: variables.data-00000-of-00001  variables.index
scripts/: display_recent_game_in_log.py  init_data.py  init_model.py  load_and_save_model.py  model_trainer.py
src/: NeuralNet.py  constants.rs  lib.rs  main.rs  monte_carlo_tree_search.rs  types.rs
src/rules/: mod.rs  types.rs
training_data/: game_state_data.npy  pi_data.npy  result_data.npy
