[package]
name = "nn5"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tensorflow = { version = "0.18.0", features = ["eager", "ndarray"] }
ndarray = "0.15.4"
ndarray-npy = { version = "0.8.1", default-features = false }
crossterm = "0.23.2"

[profile.dev]
opt-level = 3